# sqs

./: .coderabbit.yaml  .dockerignore  .gitignore  .swaggo  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debug  Makefile  README.md  RELEASE.md  candidate_route.go  config-mainnet.json  config-testnet.json  config.json  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  mockery.yaml  new_bench_100  new_bench_400  old_bench  perf.data  perf.data.old  start  start.sh  taker_fee.go
.github/: mergify.yml
app/: main.go  sidecar_query_server.go  sqs_config.go
chain/: client.go
docs/: docs.go  swagger.json  swagger.yaml
domain/: candidate_routes.go  candidate_routes_test.go  config.go  config_test.go  errors.go  export_test.go  ingester.go  orderbook.go  pool_denom_metadata_map.go  pools.go  pricing.go  pricing_test.go  quote.go  routable_pool.go  route_test.go  router.go  router_handlet_test.go  sentry.go  telemetry.go  tokens.go  url.go  util.go  worker.go
grpc/: grpc.go
ingest/: README.md
localnet/: Dockerfile  start.sh
locust/: docker-compose.yml  in_given_out.py  locustfile.py  orderbook_active_orders.py  out_given_in.py  pairs.py  passthrough_orderbook_active_orders.py  passthrough_portfolio_balances.py  pools.py  routes.py  token_prices.py
log/: logger.go
manifests/: deployment.yaml.template
middleware/: middleware.go
mocks/: router_repository_mock.go
router/: README.md
rustffi/: link.go  (+4 more)
rustffi/rustsrc/: Cargo.toml  build.rs
rustffi/rustsrc/src/: lib.rs  numbers.rs  option.rs  result.rs  slice.rs  transmuter.rs
(+394 files in other folders)
